> Changed Restart from DIV element to canvas objects (rect and text) > Fixed Issue#15 (player AoE damage) > Changed Enemy object to class > Added Button and Text classes for canvas (used for restart) > Removed enemy.crash() for now since enemy entities will go towards the player. > This commit has variables that are not fit for gameplay, variables here are currently for testing, indicated with a comment of '***'.

--- a/Game/game.css
+++ b/Game/game.css
@@ -13,26 +13,3 @@
     width: 100vw;
     height: 90vh;
 }
-
-.RestartPrompt {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 20%;
-    width: 500px;
-    height: 300px;
-    border: 1px solid black;
-    background-color: rgba(18, 52, 50, 0.6);
-    border-radius: 5%;
-}
-
-.RestartPrompt input {
-    font-size: 25px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color: rgba(135, 206, 235, 1);
-    border: 0;
-    border-radius: 25%;
-    width: 100px;
-}
